updates to download

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 			
 	        <kit-component :extension="kit_extension" :directory="directory"></kit-component>
             
-            <download-component :enabled="download_enabled" :path="path" :kit_folder="kit_folder" :job_folder="job_folder" :bin_folder="bin_folder"></download-component>
+            <download-component :enabled="download_enabled" :path="path" :kit_folder="kit_folder" :job_folder="job_folder" :bin_folder="bin_folder" :import_status="import_status"></download-component>
 
             <h2>Dynamic Data</h2>
             <p>Uses Vue to dynamically update in response to messages from Node-RED.</p>
